Amended image issue with CTA on mobile

--- a/styles/components/_cta.scss
+++ b/styles/components/_cta.scss
@@ -1,4 +1,6 @@
 .cta {
+  margin-bottom: 80px;
+
   &__img {
     display: flex;
     justify-content: center;
@@ -10,8 +12,14 @@
     }
 
     img {
+      height: auto;
+      width: 100%;
+      object-fit: cover;
       max-height: 300px;
-      width: auto;
+
+      @include media-breakpoint-up(md) {
+        width: 80%;
+      }
     }
   }
 
